8140606: Update library code to use internal Unsafe
Reviewed-by: alanb, mchung, psandoz, weijun